# ae_nexrender_module

./: .env.example  .gitignore  CLAUDE.md  README_TEST.md  package-lock.json  package.json  pyproject.toml
.claude/commands/: ai-login.md
api/: __init__.py  dependencies.py  server.py
api/middleware/: __init__.py  auth.py
api/routes/: __init__.py  config.py  health.py  mapping.py  render.py
api/schemas/: __init__.py  request.py  response.py
config/: __init__.py  api_config.yaml  config_manager.py
config/mappings/: CyprusDesign.yaml
docker/: Dockerfile  Dockerfile.api  docker-compose.full.yml  docker-compose.yml
docs/: DEBUG_TEXT_FIELD_ISSUE.md  README_DEPLOY.md
lib/: __init__.py  client.py  errors.py  job_builder.py  mapping_loader.py  mapping_validator.py  path_utils.py  types.py
migrations/: 000_full_migration_no_fk.sql  001_render_queue.sql  002_rls_policies.sql  003_rpc_functions.sql
scripts/: __init__.py  list_output_modules.jsx  render_api_server.py  render_worker.py  seed_render_queue.py  setup_alpha_output.jsx  start_nexrender.py  test_render.py
tasks/prds/: PRD-0011-ae-nexrender-v2.md
tests/: __init__.py  conftest.py  sample_data.py  test_client.py  test_errors.py  test_job_builder.py  test_mapping_validator.py  test_path_utils.py
tests/integration/: test_job_processor_e2e.py  test_worker_workflow.py
tests/test_api/: test_mapping_endpoints.py  test_render_endpoints.py
tests/test_config/: __init__.py  test_config_manager.py
worker/: __init__.py  config.py  health.py  job_processor.py  main.py  supabase_client.py
